nexus/nexus-service.yml
apiVersion: v1
kind: Service
metadata:
  name:  nexus-svc
  namespace: devops
  labels:
    name: nexus-svc
spec:
  ports:
  - name: web
    port: 8081
    targetPort: 8081 
  selector:
    name: nexus
