nexus/nexus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nexus.devops.io
    http:
      paths:
        - path: /
          backend:
            serviceName: nexus-svc
            servicePort: 8081
